changed master branch to main branch

--- a/.github/workflows/bumptag.yml
+++ b/.github/workflows/bumptag.yml
@@ -4,7 +4,7 @@ name: "Autobump tag on master"
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'teflo_notify_service_plugin/__init__.py'
 
