change branch to main2

--- a/.github/workflows/pushtopypi.yml
+++ b/.github/workflows/pushtopypi.yml
@@ -3,7 +3,7 @@ name: "Push master to pypi on version change"
 on:
   push:
     branches:
-      - main
+      - main2
     paths:
       - 'teflo_notify_service_plugin/__init__.py'
 
@@ -26,5 +26,5 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
           python setup.py sdist bdist_wheel
-          twine upload dist/*
+          twine upload --repository-url https://test.pypi.org/legacy/ dist/*
 
